tests/fixtures/invalid/str_pow_int.py
# Cannot power Str and Int
x: str = "hello" ** 1
